[gd_scene load_steps=4 format=3 uid="uid://wnhf7n1psauu"]

[ext_resource type="Script" path="res://addons/property_selection_window/window/property_selection_window.gd" id="1_pdkru"]

[sub_resource type="Image" id="Image_awac7"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_v7aar"]
image = SubResource("Image_awac7")

[node name="Property Selection Window" type="PopupPanel"]
title = "Select Properties"
initial_position = 1
size = Vector2i(800, 600)
visible = true
wrap_controls = false
unresizable = false
borderless = false
popup_window = false
min_size = Vector2i(400, 200)
script = ExtResource("1_pdkru")

[node name="Margin" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 796.0
offset_bottom = 596.0
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Main" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopRow" type="HBoxContainer" parent="Margin/Main"]
layout_mode = 2
size_flags_vertical = 0

[node name="SearchField" type="LineEdit" parent="Margin/Main/TopRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Filter through properties, also accepts full property names. `eg: node.other_node.name`"
placeholder_text = "Filter Properties"
clear_button_enabled = true
right_icon = SubResource("ImageTexture_v7aar")

[node name="DebounceTimer" type="Timer" parent="Margin/Main/TopRow/SearchField"]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[node name="TypeFilterOption" type="OptionButton" parent="Margin/Main/TopRow"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 9
popup/item_0/text = "All Types"
popup/item_1/text = "Boolean"
popup/item_1/id = 1
popup/item_2/text = "Integer"
popup/item_2/id = 2
popup/item_3/text = "Float"
popup/item_3/id = 3
popup/item_4/text = "String"
popup/item_4/id = 4
popup/item_5/text = "Vector2"
popup/item_5/id = 5
popup/item_6/text = "Vector3"
popup/item_6/id = 9
popup/item_7/text = "Color"
popup/item_7/id = 20
popup/item_8/text = "Object"
popup/item_8/id = 24

[node name="ShowAll" type="CheckButton" parent="Margin/Main/TopRow"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Show all properties in tree, including those hidden by default."
text = "Show All"

[node name="Properties" type="VBoxContainer" parent="Margin/Main"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PropertiesTree" type="Tree" parent="Margin/Main/Properties"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 3
column_titles_visible = true

[node name="BottomButtons" type="HBoxContainer" parent="Margin/Main"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Confirm" type="Button" parent="Margin/Main/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Confirm"

[node name="Cancel" type="Button" parent="Margin/Main/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Cancel	"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="Margin/Main/TopRow/SearchField" to="." method="_on_search_text_changed"]
[connection signal="toggled" from="Margin/Main/TopRow/ShowAll" to="." method="_on_show_all_toggled"]
[connection signal="multi_selected" from="Margin/Main/Properties/PropertiesTree" to="." method="_on_properties_tree_multi_selected"]
[connection signal="pressed" from="Margin/Main/BottomButtons/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Margin/Main/BottomButtons/Cancel" to="." method="_on_cancel_pressed"]
